--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phantasy Star III</title>
     <link rel="stylesheet" href="res/css/styles.css">
+    <script src="res/js-createjs/preloadjs.min.js"></script>
+    <script src="res/js-createjs/soundjs.min.js"></script>
 </head>
 <body>
     <div id="gameContainer">
