--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <title>Phantasy Star III</title>
     <link rel="stylesheet" href="res/css/styles.css">
-    <script src="res/js-createjs/preloadjs.min.js"></script>
-    <script src="res/js-createjs/soundjs.min.js"></script>
+    <script src="res/js/createjs/preloadjs.min.js"></script>
+    <script src="res/js/createjs/soundjs.min.js"></script>
 </head>
 <body>
     <div id="gameContainer">
