--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,9 +9,9 @@
     <script rel="preload" src="res/fon/verdana/verdanab.ttf" as="font" type="font/ttf" crossorigin></script>
     <script rel="preload" src="res/fon/verdana/verdanai.ttf" as="font" type="font/ttf" crossorigin></script>
     <script rel="preload" src="res/fon/verdana/verdanaz.ttf" as="font" type="font/ttf" crossorigin></script>
-    <script src="res/js/jquery/jquery-3.6.1.min.js"></script>
-    <script src="res/js/createjs/preloadjs.min.js"></script>
-    <script src="res/js/createjs/soundjs.min.js"></script>
+    <script src="res/js/lib/jquery/jquery-3.6.1.min.js"></script>
+    <script src="res/js/lib/createjs/preloadjs.min.js"></script>
+    <script src="res/js/lib/createjs/soundjs.min.js"></script>
 </head>
 <body>
     <div id="gameContainer">
